[package]
name = "rest"
version = "0.1.0"
authors = ["Piotr Szczygieł <szczygiel.p@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-files = "0.2"
futures = "0.3"
lazy_static = "1.4.0"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
pretty_env_logger = "0.4.0"
log = "0.4.8"

